--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -11,7 +11,7 @@
 # -------------------------------------------------------------------------------------
 
 # website title
-title = ""
+title = "cheems的随笔"
 # Hostname (and path) to the root
 baseURL = "https://cheems-essays.pages.dev"
 # theme list
