解决目录不显示的bug

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -35,7 +35,7 @@ enableEmoji = true
 # the main sections of a site
 # if set, the MainSections method on the Site object returns the given sections,
 # otherwise it returns the section with the most pages.
-# mainSections = ["posts"]
+mainSections = ["posts"]
 
 # -------------------------------------------------------------------------------------
 # Menu Configuration
@@ -256,6 +256,7 @@ priority = 0.5
 # -------------------------------------------------------------------------------------
 
 [permalinks]
+  posts = "/:section/:slug/"
 
 [permalinks.page]
 
@@ -1186,7 +1187,7 @@ enable = true
 # whether to keep the static table of the contents in front of the post
 keepStatic = false
 # whether to make the table of the contents in the sidebar automatically collapsed
-auto = true
+auto = false
 # FixIt 0.2.13 | NEW position of TOC ["left", "right"]
 position = "right"
 # FixIt 0.3.12 | NEW supersede `markup.tableOfContents` settings
